Changed over to local images.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Buster.TimeSeries</h1>
     <div>
-      <img id="dateID" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=Buster.TimeSeries&w=350&h=150" alt="">
+      <img id="dateID" src="./img/default_image.png" alt="">
     </div>
     <div style="margin-top: 2rem;">
       <form action="#" id="dateForm">
@@ -37,17 +37,16 @@
         evergreen_day_before: true,
         evergreen_day_of: true,
         images: {
-          '-2_weeks': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Outside+Two+Weeks&w=350&h=250',
-          '-1_weeks': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Outside+One+Week&w=350&h=250',
-          '0_weeks': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=This+Week&w=350&h=250',
-          'outside_weeks_before': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Outside+Weeks+Before&w=350&h=250',
-          'outside_days_before': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Outside+Days+Before&w=350&h=250',
-          '-1_days': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Tomorrow&w=350&h=250',
-          '0_days': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Tonight&w=350&h=250',
-          '1_days': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Yesterday&w=350&h=250',
-          'evergreen_weeks_after': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Evergreen+Weeks+After&w=350&h=250',
-          'evergreen_day_before': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Evergreen+Day+Before&w=350&h=250',
-          'evergreen_day_of': 'https://placeholdit.imgix.net/~text?txtsize=33&txt=Evergreen+Day+Of&w=350&h=250'
+          '-2_weeks': './img/outside_two_weeks.png',
+          '-1_weeks': './img/outside_one_week.png',
+          '0_weeks': './img/this_week.png',
+          'outside_weeks_before': './img/outside_weeks_before.png',
+          'outside_days_before': './img/outside_days_before.png',
+          '-1_days': './img/tomorrow.png',
+          'tonight': './img/tonight.png',
+          'evergreen_weeks_after': './img/evergreen_weeks_after.png',
+          'evergreen_day_before': './img/evergreen_day_before.png',
+          'evergreen_day_of': './img/evergreen_day_of.png'
         }
       };
 
