Uglifying the build.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <!--  This script will be included at the top of the page, somewhere in the body -->
-    <script type="text/javascript" src="dist/timerange.js" charset="utf-8"></script>
+    <script type="text/javascript" src="dist/timerange.ugly/timerange.js" charset="utf-8"></script>
     <!-- <script type="text/javascript" src="src/date_difference.js" charset="utf-8"></script> -->
     <!-- // END -->
 
@@ -68,7 +68,7 @@
       btr.init();
 
       // This is just for testing and will be omitted for production.
-      formHelper(btr);
+      // formHelper(btr);
 
     </script>
     <!-- END -->
