--- a/date_test_gwd/gwd_preview/index.html
+++ b/date_test_gwd/gwd_preview/index.html
@@ -270,7 +270,7 @@ body {
         <div class="gwd-page-content gwd-page-size">
           <img is="gwd-image" source="date_01.png" id="dateID" class="gwd-img-12x6 gwd-gen-7plagwdanimation">
           <gwd-taparea id="clickthrough" class="gwd-taparea-24bz"></gwd-taparea>
-          <video is="gwd-video" id="videoID" muted="" sources="video_01.mp4,video_02.mp4,video_03.mp4,video_04.mp4,video_05.mp4" class="gwd-video-tfwz gwd-gen-8oesgwdanimation" controls=""></video>
+          <video is="gwd-video" id="videoID" muted="" sources="video_01.mp4,video_02.mp4,video_03.mp4,video_04.mp4,video_05.mp4" class="gwd-video-tfwz gwd-gen-8oesgwdanimation" controls="" autoplay=""></video>
         </div>
       </div>
     </div>
@@ -355,6 +355,6 @@ body {
 
 
 <script data-exports-type="dclk-quick-preview">studio.Enabler.setRushSimulatedLocalEvents(true);</script><script data-exports-type="gwd-studio-registration">function StudioExports() {
-studio.video.Reporter.attach("videoID", dummyVideoElem, false);
+studio.video.Reporter.attach("videoID", dummyVideoElem, true);
 Enabler.exit("clickTag", "http://www.google.com");
-}</script><script type="text/gwd-admetadata">{"version":1,"type":"DoubleClick","format":"","template":"","politeload":false,"fullscreen":false,"counters":[{"sourceType":"video","source":"videoID","metric":"videoID","isAutoplay":false}],"timers":[],"exits":[{"exitId":"clickTag","url":"http://www.google.com"}],"creativeProperties":{"minWidth":300,"minHeight":600,"maxWidth":300,"maxHeight":600},"components":["gwd-taparea","gwd-image","gwd-video","gwd-page","gwd-doubleclick","gwd-pagedeck"]}</script></body></html>
+}</script><script type="text/gwd-admetadata">{"version":1,"type":"DoubleClick","format":"","template":"","politeload":false,"fullscreen":false,"counters":[{"sourceType":"video","source":"videoID","metric":"videoID","isAutoplay":true}],"timers":[],"exits":[{"exitId":"clickTag","url":"http://www.google.com"}],"creativeProperties":{"minWidth":300,"minHeight":600,"maxWidth":300,"maxHeight":600},"components":["gwd-taparea","gwd-image","gwd-video","gwd-doubleclick","gwd-page","gwd-pagedeck"]}</script></body></html>
