Adding conditions that check for the config.video object.

--- a/date_test_gwd/gwd_preview/index.html
+++ b/date_test_gwd/gwd_preview/index.html
@@ -260,7 +260,7 @@ body {
     document.addEventListener("DOMContentLoaded", gwd.actions.events.registerEventHandlers);
     document.addEventListener("unload", gwd.actions.events.deregisterEventHandlers);
   </script>
-</head>
+<script src="mockenabler.js" type="text/javascript"></script></head>
 
 <body>
   <gwd-doubleclick id="gwd-ad">
