Adding conditions for tonight and week of messaging.

--- a/date_test_gwd/Buster_Date_Test_GWD_IMG.html
+++ b/date_test_gwd/Buster_Date_Test_GWD_IMG.html
@@ -40,6 +40,7 @@
       height: 600px;
     }
     .gwd-div-i56i {
+      height: 250px;
       background-image: none;
       background-color: rgb(88, 88, 88);
     }
@@ -51,51 +52,8 @@
       width: 300px;
       height: 250px;
       opacity: 1;
-      left: 300px;
-      top: 310.333px;
-    }
-    .gwd-video-tfwz {
-      position: absolute;
-      width: 300px;
-      height: 250px;
-      left: -300px;
-      top: 30px;
-    }
-    #page1.gwd-play-animation .gwd-gen-8oesgwdanimation {
-      animation: gwd-gen-8oesgwdanimation_gwd-keyframes 0.6s linear 0.2s 1 normal forwards;
-    }
-    #page1.gwd-play-animation .gwd-gen-7plagwdanimation {
-      animation: gwd-gen-7plagwdanimation_gwd-keyframes 0.6s linear 0.8s 1 normal forwards;
-    }
-    @keyframes gwd-gen-8oesgwdanimation_gwd-keyframes {
-      0% {
-        left: -300px;
-        top: 30px;
-        animation-timing-function: ease-out;
-      }
-      100% {
-        left: 0px;
-        top: 30px;
-        animation-timing-function: ease-out;
-      }
-    }
-    @keyframes gwd-gen-7plagwdanimation_gwd-keyframes {
-      0% {
-        width: 300px;
-        height: 250px;
-        left: 300px;
-        top: 310.333px;
-        opacity: 1;
-        animation-timing-function: ease-out;
-      }
-      100% {
-        width: 300px;
-        height: 250px;
-        left: 0px;
-        top: 310.333px;
-        opacity: 1;
-        animation-timing-function: linear;
-      }
+      top: 0px;
+      left: 22px;
     }
     @keyframes gwd-empty-animation {
       0% {
@@ -105,20 +63,81 @@
         opacity: 0;
       }
     }
-    .gwd-taparea-24bz {
+    .gwd-div-1pwv {
+      height: 250px;
+    }
+    .gwd-ci-dateswap-7tan {
       position: absolute;
-      transform-style: preserve-3d;
-      left: 0px;
+      width: 100px;
+      height: 100px;
+      left: 17px;
+      top: 15px;
+    }
+    .gwd-img-1vga {
+      left: 22px;
       top: 0px;
-      width: 300px;
-      height: 600px;
-      transform-origin: 150px 300px 0px;
-      transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    }
+    .gwd-img-172y {
+      left: 22px;
+      top: 0px;
+    }
+    .gwd-img-9jys {
+      left: 22px;
+      top: 0px;
+    }
+    .gwd-ci-dateswap-1gsy {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 0px;
+      left: 0px;
+    }
+    @keyframes gwd-gen-7plagwdanimation_gwd-keyframes {
+      0% {
+        left: 22px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      100% {
+        left: -1px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-7plagwdanimation {
+      animation: gwd-gen-7plagwdanimation_gwd-keyframes 0.8s linear 0s 1 normal forwards;
+    }
+    #page1.gwd-play-animation .event-1-animation {
+      animation: gwd-empty-animation 0.0001s linear 0s 1 normal forwards;
+    }
+    #page1.label-1 .event-1-animation {
+      animation: gwd-empty-animation-label-1 0.0001s linear 0s 1 normal forwards;
+    }
+    @keyframes gwd-empty-animation-label-1 {
+      0% {
+        opacity: 0.001;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+    @keyframes gwd-gen-7plagwdanimation_gwd-keyframes_label-1 {
+      0% {
+        left: 22px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      100% {
+        left: -1px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.label-1 .gwd-gen-7plagwdanimation {
+      animation: gwd-gen-7plagwdanimation_gwd-keyframes_label-1 0.8s linear 0s 1 normal forwards;
     }
   </style>
   <link href="gwdpage_style.css" data-version="8" data-exports-type="gwd-page" rel="stylesheet">
-  <link href="gwdtaparea_style.css" data-version="4" data-exports-type="gwd-taparea" rel="stylesheet">
-  <link href="gwdvideo_style.css" data-version="6" data-exports-type="gwd-video" rel="stylesheet">
   <link href="gwdimage_style.css" data-version="7" data-exports-type="gwd-image" rel="stylesheet">
   <link href="gwddoubleclick_style.css" data-version="10" data-exports-type="gwd-doubleclick" rel="stylesheet">
   <link href="gwdpagedeck_style.css" data-version="8" data-exports-type="gwd-pagedeck" rel="stylesheet">
@@ -128,58 +147,22 @@
   <script data-source="gwdpagedeck_min.js" data-version="8" data-exports-type="gwd-pagedeck" type="text/javascript" src="gwdpagedeck_min.js"></script>
   <script data-source="https://s0.2mdn.net/ads/studio/Enabler.js" data-exports-type="gwd-doubleclick" type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
   <script data-source="gwddoubleclick_min.js" data-version="10" data-exports-type="gwd-doubleclick" type="text/javascript" src="gwddoubleclick_min.js"></script>
-  <script data-source="gwdimage_min.js" data-version="7" data-exports-type="gwd-image" type="text/javascript" src="gwdimage_min.js"></script>
-  <script data-source="gwdvideo_min.js" data-version="6" data-exports-type="gwd-video" type="text/javascript" src="gwdvideo_min.js"></script>
   <script type="text/javascript" src="timerange.js"></script>
-  <script data-source="gwdtaparea_min.js" data-version="4" data-exports-type="gwd-taparea" type="text/javascript" src="gwdtaparea_min.js"></script>
-  <script type="text/javascript" gwd-events="support" src="gwd-events-support.1.0.js"></script>
-  <script type="text/javascript" gwd-events="handlers">
-    gwd.auto_ClickthroughAction = function(event) {
-      // GWD Predefined Function
-      gwd.actions.gwdDoubleclick.exit('gwd-ad', 'clickTag', 'http://www.google.com', false, false);
-    };
-    gwd.auto_VideoIDClick = function(event) {
-      // GWD Predefined Function
-      gwd.actions.gwdDoubleclick.exit('gwd-ad', 'clickTag', 'http://www.google.com', false, false);
-    };
-    gwd.auto_BodyClick = function(event) {
-      // GWD Predefined Function
-      gwd.actions.gwdVideo.seek('videoID', 4);
-    };
-  </script>
-  <script type="text/javascript" gwd-events="registration">
-    // Support code for event handling in Google Web Designer
-     // This script block is auto-generated. Please do not edit!
-    gwd.actions.events.registerEventHandlers = function(event) {
-      gwd.actions.events.addHandler('clickthrough', 'action', gwd.auto_ClickthroughAction, false);
-      gwd.actions.events.addHandler('videoID', 'click', gwd.auto_VideoIDClick, false);
-      gwd.actions.events.addHandler('document.body', 'click', gwd.auto_BodyClick, false);
-    };
-    gwd.actions.events.deregisterEventHandlers = function(event) {
-      gwd.actions.events.removeHandler('clickthrough', 'action', gwd.auto_ClickthroughAction, false);
-      gwd.actions.events.removeHandler('videoID', 'click', gwd.auto_VideoIDClick, false);
-      gwd.actions.events.removeHandler('document.body', 'click', gwd.auto_BodyClick, false);
-    };
-    document.addEventListener("DOMContentLoaded", gwd.actions.events.registerEventHandlers);
-    document.addEventListener("unload", gwd.actions.events.deregisterEventHandlers);
-  </script>
+  <script data-source="gwdimage_min.js" data-version="7" data-exports-type="gwd-image" type="text/javascript" src="gwdimage_min.js"></script>
 </head>
 
 <body>
   <gwd-doubleclick id="gwd-ad">
-    <gwd-metric-configuration>
-      <gwd-metric-event source="clickthrough" event="tapareaexit" metric=""></gwd-metric-event>
-    </gwd-metric-configuration>
+    <gwd-metric-configuration></gwd-metric-configuration>
     <div is="gwd-pagedeck" class="gwd-page-container" id="pagedeck">
-      <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-div-i56i" data-gwd-width="300px" data-gwd-height="600px">
-        <div class="gwd-page-content gwd-page-size">
-          <img is="gwd-image" source="assets/date_01.png" id="dateID" class="gwd-img-12x6 gwd-gen-7plagwdanimation">
-          <gwd-taparea id="clickthrough" class="gwd-taparea-24bz"></gwd-taparea>
-          <video is="gwd-video" id="videoID" muted="" sources="assets/video_01.mp4,assets/video_02.mp4,assets/video_03.mp4,assets/video_04.mp4,assets/video_05.mp4" class="gwd-video-tfwz gwd-gen-8oesgwdanimation" controls="" autoplay=""></video>
+      <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-div-i56i" data-gwd-width="300px" data-gwd-height="250px">
+        <div class="gwd-page-content gwd-page-size gwd-div-1pwv">
+          <img is="gwd-image" source="assets/date_01.png" class="gwd-img-12x6 gwd-img-1vga gwd-img-172y gwd-img-9jys gwd-gen-7plagwdanimation" id="dateID">
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="0.1"></div>
+          <gwd_animation_label_element data-label-name="label-1" data-label-time="0" data-label-animation-class-name="label-1"></gwd_animation_label_element>
         </div>
       </div>
     </div>
-    <gwd-exit metric="clickTag" url="http://www.google.com"></gwd-exit>
   </gwd-doubleclick>
   <script type="text/javascript" id="gwd-init-code">
     (function() {
