--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script>
 
       var config = {
-        targetDate: new Date('2016-02-26'),
+        targetDate: '2016-03-06',
         targetShowDuration: 59,
         imageElement: 'dateID',
         videoElement: 'videoID',
